apps/services/vikunja/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  labels:
    app: vikunja
  annotations:
    link.argocd.argoproj.io/external-link: https://vikunja.lab.apj.dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
      - name: vikunja
        image: vikunjaio/vikunja
        ports:
        - name: web
          containerPort: 3456
          protocol: TCP
        resources:
          requests:
            cpu: 150m
            memory: 512Mi
          limits:
            cpu: 550m
            memory: 768Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 60
        startupProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 120
        volumeMounts:
        - name: files
          mountPath: /app/vikunja/files
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-storage
